# ChangeLog for dev-python/mocker
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/mocker/ChangeLog,v 1.7 2012/11/03 18:24:32 idella4 Exp $

*mocker-1.1.1 (04 Nov 2012)

  04 Nov 2012; Ian Delaney <idella4@gentoo.org>
  +files/mocker-1.1.1-pypy_test.patch, +mocker-1.1.1.ebuild, -mocker-1.0.ebuild:
  bumped to mocker-1.1.1, new patch for pypy to pass tests, mocker-1.0 dropped,
  closes Bug 425686

*mocker-1.1 (16 Sep 2011)

  16 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> +mocker-1.1.ebuild:
  Version bump to 1.1 (fixes bug 382949, thanks jbergstroem).

  01 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -mocker-0.10.1.ebuild:
  Delete.

*mocker-1.0 (21 Jun 2010)

  21 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +mocker-1.0.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org> mocker-0.10.1.ebuild:
  Merge from Prefix

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> mocker-0.10.1.ebuild:
  Adding ~amd64 keyword

*mocker-0.10.1 (30 Aug 2008)

  30 Aug 2008; Rob Cakebread <pythonhead@gentoo.org> +metadata.xml,
  +mocker-0.10.1.ebuild:
  Initial commit, ebuild by Maciej Blizinski <maciej.blizinski@gmail.com> -
  thanks, Maciej. bug #214433