@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX mocker-1.1.1-pypy_test.patch 1380 SHA256 432470af0be4b86cfb01b8baf96cc617fcc043950f45274b467a5df43771852d SHA512 cbbda1c8903658332f7a391c7be547d62d64c5b149c2d92434558415dafc0c68686d5210ba814ba5edb42987f04e51cb8e5ee10e3a31684560a0856f9aba81c0 WHIRLPOOL aaf9e74486a4dc6cf3cc63a6a7d7d226f794e67b0ab64ba8bc6ca8aa67a792dd8c9b42b1e10d17d670133b7af64ad6cbc83d727fe3b362bd4fa7855391a6a29e
 DIST mocker-1.1.1.tar.bz2 36357 SHA256 2009911707c74b28bdc9959b5224717e45fcb93475b4b7bb4efad3285fcf2919 SHA512 79fc08220b932f5e8ec4999a872fd522a71e2d193fb7842a60b164793863d97aefbd5b16469243c323b8ee151a33e1ea18703b7ceaa239c816bc09a3fb7f6825 WHIRLPOOL 29103b97a278575a424ff46f986459d93751a2865fb1eecfa37134053dfdd03e0998f280b44c43d9c9bd4044b7121b20c191e7dc1989790d774eda653f731619
 DIST mocker-1.1.tar.bz2 36144 SHA256 9ee647ede708a3cdcef77134169a056ce044669b9ee99bbc81444cff70d52991 SHA512 7c57414e439e2dc5566898aef21d5053bcfce976dd3423b7ed81cf01eb84b403b849430e104fa6a0a2660acac2677516083045b4e8da138824f805a33915f2ce WHIRLPOOL 71c63599aabfb6a39737fa3229a942038cb539c74b43f208a969f15abcdf8db05114cdbe33079b1ec7f9901a3a8ccb63d95c3978d07ad43e58d6dd4c7e0bf3a0
-EBUILD mocker-1.1.1.ebuild 877 SHA256 2caa2368430590a16a03e226f86129d95d0f2d3c144511792bd2de1d1cc0cb23 SHA512 05c73da7e7843e37f02a75437dcb9fc8963991468493f6b6a42789a27d4dbdb53c36fedd3053bd4601c08f17fda1dff5f4dadae70587be621f14c67449e907df WHIRLPOOL f940a6734a9d486f57e96dbf2928087e717c046feaa5b5d4b93a62eea5fd3738a4d7dafca27d7a02b90cb4c02362d47027a52fc992b6f0cdec4129d64ffe90e5
+EBUILD mocker-1.1.1-r1.ebuild 824 SHA256 77e875ae5b90c206db64b9131b9357608f23528cf4d143291897d9c5ab54bd52 SHA512 bb452990c110f61fcb5fcd9c0ab5131560a015159be76f0af5e04667fb21ff3b96d856e10678d1837a32752fde819b047742de7cd908b443bcaf6a0e736f2e5f WHIRLPOOL bb2f370a4e6d0b01092cf0bc76e12677b0ce7fb5d1e488ae6948763e310c1ccc7d6441fd47626da1f088c8f3e5d9155d65f74a119680bd243f917ae8c7597e3c
 EBUILD mocker-1.1.ebuild 821 SHA256 8bd90db9655b6f9345266d081de5dde0eaaf509f1443ba6fafcc99a4cb0f6717 SHA512 1afa616c81e4e6303cfb9f7b344b6c5bd913363cceaef0703b5cfa056c232ea6b2c0c747b1b7caf32c053fb875f6215cc32161cb92d3918add020a9d47172b54 WHIRLPOOL 1830030cb7f4141750119e4886815112f9085f6538f637c1e7739105315208c0c67d2a54c5083922b808b002a7a4936341d93f68320245adabf765b4b376047f
-MISC ChangeLog 1318 SHA256 9f6345a803bbdfd0b649cc303887393b7e9d755201ae99b708ea984326b065e0 SHA512 bf710d35c073134adaf5fed97b9566e8b9b1b3ee1c972b0a2b89c4401191abfb6aa2d99fa6e4bbaf9153052cc028ae5139a129817f9ffb4044345f87a11e8882 WHIRLPOOL 168957f7032a09f6eb2e5f188a65c727d3ecb431a9f45b00b0e33dba1302384286c457abf1aa69af60b56011f792939564ef063fd1e1e2281ed53e82e2a6a37c
+MISC ChangeLog 1486 SHA256 a3bb28e08bc58254b7d1bcaa150db1ccc7758704c34725d7d6dcbc766e4af8df SHA512 f82fed942e64e5ab10ebf26e4b09021b8d6b0a382d71af45dc6f67a1619603e35a44ecd49d236c7f7952dbfa263a97f34643a8c65e27d48416f99d50bdc52383 WHIRLPOOL cc73dcc731126c1cf3f8e6dfe06ccfef7b77c61858384913767b278e547ba632879f1e278a5c849fc464ea79221a9114032418acb4965ac38934b5db70625af3
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlHqWMEACgkQso7CE7gHKw0IYwCfYpiRHD1zCrIC6K6fP1wYDzvs
+SzcAoIXwWG5zPtIZXxNzO3LA1E2Tpf/H
+=L715
+-----END PGP SIGNATURE-----
