@@ -1,13 +1,11 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/mocker/mocker-1.1.1.ebuild,v 1.1 2012/11/03 18:24:32 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/mocker/mocker-1.1.1-r1.ebuild,v 1.1 2013/07/20 09:30:12 idella4 Exp $
 
-EAPI="4"
-PYTHON_DEPEND="2"
-SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.*"
+EAPI=5
+PYTHON_COMPAT=( python{2_5,2_6,2_7} pypy2_0 )
 
-inherit distutils eutils
+inherit distutils-r1
 
 DESCRIPTION="Platform for Python test doubles: mocks, stubs, fakes, and dummies"
 HOMEPAGE="http://labix.org/mocker http://pypi.python.org/pypi/mocker"
@@ -18,7 +16,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux ~x86-macos"
 IUSE=""
 
-DEPEND="dev-python/setuptools"
+DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
 RDEPEND=""
 
 PYTHON_MODNAME="mocker.py"
@@ -27,9 +25,6 @@ src_prepare() {
 	epatch "${FILESDIR}"/${P}-pypy_test.patch
 }
 
-src_test() {
-	testing() {
-		PYTHONPATH="build-${PYTHON_ABI}/lib" "$(PYTHON)" test.py
-	}
-	python_execute_function testing
+python_test() {
+	"${PYTHON}" test.py || die "Tests failed under ${EPYTHON}"
 }
